# CODO-Flashcard

./: .gitignore  README.md  index.html  install-package-readme.md  launch-flashcard-app.bat  launch-flashcard-dev.bat  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: tauri-runner.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_dynamic_fields.sql  003_review_units.sql  004_scheduler_calibration.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analytics_commands.rs  calibration_commands.rs  card_commands.rs  deck_commands.rs  import_commands.rs  mod.rs  settings_commands.rs  study_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/repository/: analytics_repo.rs  card_repo.rs  deck_repo.rs  dynamic_repo.rs  mod.rs  review_unit_repo.rs  scheduler_repo.rs  settings_repo.rs  study_repo.rs
src-tauri/src/models/: error.rs  types.rs
src-tauri/src/services/: analytics.rs  backup.rs  calibration.rs  daily_coach.rs  exporter.rs  importer.rs  mod.rs  normalization.rs  srs.rs
src/app/: App.tsx  AppContext.tsx
src/lib/: api.ts  deckFields.ts  format.ts  i18n.tsx  keyboard.ts  messages.test.ts  messages.ts  normalization.ts  types.ts  uiPreferences.test.ts  uiPreferences.ts  usePanelVisibility.ts
src/styles/: globals.css
tests/frontend/: deck-sorting.test.ts  field-text.test.tsx  import-help.test.tsx  import-mapping.test.ts  normalization.test.ts  study-setup-summary.test.ts
(+23 files in other folders)
