[package]
name = "codo_flashcard"
version = "0.1.0"
description = "CODO: Flashcard - local-first multilingual flashcard desktop app"
authors = ["PARSA FALAHATI"]
edition = "2021"

[lib]
name = "codo_flashcard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
unicode-normalization = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
